# hpc-experiments

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: 3d.h  3d_constants.h  random.h  random3.h  util.h
common/src/: CMakeLists.txt  random.cpp  random3.cpp  util.cpp
include/md/: md_constants.h
include/md3/: md.h
include/pi/: pi.h
src/: CMakeLists.txt  main.cpp
src/md/: CMakeLists.txt
src/md3/: CMakeLists.txt  md_seq.cpp
src/pi/: CMakeLists.txt  pi_mpi.cpp  pi_openmp.cpp  pi_seq.cpp
test/: CMakeLists.txt
test/md/: test_md_seq.cpp
test/md3/: CMakeLists.txt  test_md_seq.cpp
test/pi/: CMakeLists.txt  test-pi_openmp.cpp  test-pi_seq.cpp  test_pi_mpi.cpp  test_pi_openmp.cpp  test_pi_seq.cpp
